set up mongoDB, add first endpoint
