# src/controllers/client.controller.ts
@@ -1,2 +1,0 @@
-
-export const createClient = async () => {};
