# src/types/index.ts
@@ -1,0 +1,4 @@
+export * from './categories';
+export * from './searchConfig';
+export * from './seniority';
+export * from './errors';
